--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ button {
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidepanel */
+    touch-action: none; /* disable scrolling while menu is open */
   }
 
   .sidepanel .closebtn {
